...
                          GButton(
                            key: Key('nav-radio'),
                            icon: Icons.radio_outlined,
                            text: 'Radio',
                          ),
                          GButton(
                            key: Key('nav-discover'),
                            icon: Icons.explore_outlined,
                            text: 'Discover',
                          ),
                          GButton(
                            key: Key('nav-saved'),
                            icon: Icons.favorite_outline_rounded,
                            text: 'Saved',
                          ),
                          GButton(
                            key: Key('nav-recordings'),
                            icon: Icons.library_music_outlined,
...
